--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Pokedex/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Pokedex">Github</a>
+                <a target="_blank" class="botao" href="abelardojr0.github.io/Clone-Orkut/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Clone-Orkutx">Github</a>
               </div>
             </div>
           </div>
@@ -306,8 +306,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="abelardojr0.github.io/Comic-Quizz/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Comic-Quizz">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Animais-Fantasticos/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Animais-Fantasticos">Github</a>
               </div>
             </div>
           </div>
@@ -321,7 +321,7 @@
             <img class="projeto-imagem" src="img/thumbnails/robotron.png" alt="robotron">
             <div class="projeto-infos">
               <h2 data-subtitulo>Robotron 2000</h2>
-              <p>Página construída durante o curso de Javascript da plataforma da Alura com intuito de praticar controle do DOM.</p>
+              <p>Página construída durante o curso de Javascript da plataforma da Alura com in tuito de praticar controle do DOM.</p>
               <p>Maiores desafios: Controlar elementos do DOM, dominar eventos.</p>
               <div class="projeto-tecnologias">
                 <ul>
@@ -332,8 +332,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Find-PA-PG/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Find-PA-PG">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Robotron-2000/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Robotron-2000">Github</a>
               </div>
             </div>
           </div>
@@ -358,8 +358,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Hero-Memory/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Hero-Memory">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Bikcraft/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Bikcraft">Github</a>
               </div>
             </div>
           </div>
@@ -385,8 +385,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Up-The-Irons/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Up-The-Irons">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Flexblog/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Flexblog">Github</a>
               </div>
             </div>
           </div>
@@ -411,8 +411,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Pokedex/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Pokedex">Github</a>
+                <a target="_blank" class="botao" href="abelardojr0.github.io/Mochila-Viagens/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Mochila-Viagens">Github</a>
               </div>
             </div>
           </div>
@@ -436,8 +436,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Pokedex/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Pokedex">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Wildbeast/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Wildbeast">Github</a>
               </div>
             </div>
           </div>
@@ -461,11 +461,12 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Pokedex/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Pokedex">Github</a>
+                <a target="_blank" class="botao" href="hhttps://abelardojr0.github.io/Bom-Gosto/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Bom-Gosto">Github</a>
               </div>
             </div>
           </div>
+
         </div>
 
 
@@ -497,7 +498,7 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="abelardojr0.github.io/Comic-Quizz/">Site</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Comic-Quizz/">Site</a>
                 <a target="_blank" class="botao" href="https://github.com/abelardojr0/Comic-Quizz">Github</a>
               </div>
             </div>
@@ -642,8 +643,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Pokedex/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Pokedex">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Clone-Orkut/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Clone-Orkut">Github</a>
               </div>
             </div>
           </div>
@@ -673,8 +674,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="abelardojr0.github.io/Comic-Quizz/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Comic-Quizz">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Animais-Fantasticos/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Animais-Fantasticos">Github</a>
               </div>
             </div>
           </div>
@@ -701,8 +702,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Up-The-Irons/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Up-The-Irons">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Robotron-2000/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Robotron-2000">Github</a>
               </div>
             </div>
           </div>
@@ -729,8 +730,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Up-The-Irons/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Up-The-Irons">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Bikcraft/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Bikcraft">Github</a>
               </div>
             </div>
           </div>
@@ -757,8 +758,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Hero-Memory/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Hero-Memory">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Flexblog/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Flexblog">Github</a>
               </div>
             </div>
           </div>
@@ -785,11 +786,12 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Find-PA-PG/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Find-PA-PG">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Mochila-Viagens/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Mochila-Viagens">Github</a>
               </div>
             </div>
           </div>
+
           <div class="option" style="--optionBackground:url(../img/thumbnails/wildbeast.png);">
             <div class="shadow"></div>
             <div class="label">
@@ -812,11 +814,12 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Pokedex/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Pokedex">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Wildbeast/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Wildbeast">Github</a>
               </div>
             </div>
           </div>
+
           <div class="option" style="--optionBackground:url(../img/thumbnails/bomgosto.png);">
             <div class="shadow"></div>
             <div class="label">
@@ -839,8 +842,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Pokedex/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Pokedex">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Bom-Gosto/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Bom-Gosto">Github</a>
               </div>
             </div>
           </div>
