--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
           <li class="css"><img src="img/tecnologias/css.png" alt="css"></li>
           <li class="sass"><img src="img/tecnologias/sass.png" alt="sass"></li>
           <li class="bootstrap"><img src="img/tecnologias/bootstrap.png" alt="bootstrap"></li>
-          <li class="js"><img src="img/tecnologias/JS.png" alt="javascript"></li>
+          <li class="js"><img src="img/tecnologias/js.png" alt="javascript"></li>
           <li class="react"><img src="img/tecnologias/react.png" alt="react"></li>
           <li class="styled-components"><img src="img/tecnologias/styled-components.png" alt="styled-components"></li>
           <li class="typescript"><img src="img/tecnologias/typescript.png" alt="typescript"></li>
