--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -170,7 +170,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -197,7 +197,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -224,7 +224,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -251,7 +251,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -278,7 +278,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -301,7 +301,7 @@
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -327,7 +327,7 @@
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -353,7 +353,7 @@
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -380,7 +380,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -406,7 +406,7 @@
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -493,7 +493,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -522,7 +522,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -551,7 +551,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -580,7 +580,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -609,7 +609,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -638,7 +638,7 @@
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
                   <li><img src="img/tecnologias/sass.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -669,7 +669,7 @@
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -697,7 +697,7 @@
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -725,7 +725,7 @@
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -753,7 +753,7 @@
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
@@ -781,7 +781,7 @@
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
                   <li><img src="img/tecnologias/css.png" alt=""></li>
-                  <li><img src="img/tecnologias/JS.png" alt=""></li>
+                  <li><img src="img/tecnologias/js.png" alt=""></li>
                   <li><img src="img/tecnologias/git.png" alt=""></li>
                 </ul>
               </div>
