--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       <div class="sobre-infos container">
         <h1 data-titulo class="titulo">Sobre</h1>
         <div data-sobre_texto class="sobre_texto">
-          <p>Sem fui apaixonado por tecnologia e por isso sempre trabalhei na área de T.I, porém nunca como programador, me formei em 2014 em ADS, porém continuei trabalhando no setor de Infraestrutura.</p>
+          <p>Sempre gostei de tecnologia, por isso comecei minha jornada na área de T.I, me formei em 2014 em ADS, porém continuei trabalhando no setor de Infraestrutura.</p>
           <hr>
-          <p>Porém em 2022 decidi que iria me tornar o desenvolvedor que não me tornei em 2014 e esse ano comecei a estudar com muita dedicação o desenvolvimento Front-End.</p>
+          <p>Em 2022 decidi que iria investir na área de programação e me tornar o desenvolvedor que não me tornei em 2014. Desde então estou me dedicando diariamente a estudar o desenvolvimento Front-End.</p>
         </div>
       </div>
 
@@ -137,7 +137,7 @@
             <div class="projeto-infos">
               <h2 data-subtitulo>Comic Quizz</h2>
               <p>Um jogo estilo quizz com personargens secreto, tematizado com personargens do mundo dos quadrinhos.</p>
-              <p>Maiores desafios: Desenvolver a lógica do jogo, como o controle das letras clicadas, e construir o menu dicas, que permite remover ou selecionar automaticamente e aletoriamente uma letra, deixar tudo responsivo e também controlar todo o progresso do jogador.</p>
+              <p>Maiores desafios: Desenvolver a lógica do jogo, como o controle das letras clicadas, e construir o menu dicas, que permite remover ou selecionar automaticamente e aleatoriamente uma letra, deixar tudo responsivo e também controlar todo o progresso do jogador.</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
@@ -164,7 +164,7 @@
             <div class="projeto-infos">
               <h2 data-subtitulo>Find</h2>
               <p>Projeto para automação de cálculos matemáticos, resolve facilmente problemas de Progressão Aritimética e Progressão Geométrica</p>
-              <p>Maiores desafios: Estabeleter e deixar funcional as formulas matemáticas para os mais diversos casos possíveis, e também deixar o design agradável e intuitivo.</p>
+              <p>Maiores desafios: Estabelecer e deixar funcional as formulas matemáticas para os mais diversos casos possíveis, e também deixar o design agradável e intuitivo.</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
@@ -191,7 +191,7 @@
             <div class="projeto-infos">
               <h2 data-subtitulo>Hero Memory</h2>
               <p>Jogo da memória com tema de super heróis.</p>
-              <p>Maiores desafios: Deixar o design agradável e funcional, desenvover a lógica de acertos e erros do jogo, ligar com armazenamento de dados.</p>
+              <p>Maiores desafios: Deixar o design agradável e funcional, desenvover a lógica de acertos e erros do jogo, lidar com armazenamento de dados.</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
@@ -217,8 +217,8 @@
             <img class="projeto-imagem" src="img/thumbnails/up-the-irons.gif" alt="comic-quizz">
             <div class="projeto-infos">
               <h2 data-subtitulo>Up The Irons</h2>
-              <p>Fã page com gestão de downloads, conteudo sobre a banda e um gigantesco acervo.</p>
-              <p>Maiores desafios: Manter a responsividade e criar o layout das diversas páginas, projeto feito para fixar conhecimentos de grid e flexbox</p>
+              <p>Fã page com gestão de downloads, conteúdo sobre a banda e um gigantesco acervo.</p>
+              <p>Maiores desafios: Manter a responsividade e criar o layout das diversas páginas, projeto feito para fixar conhecimentos de grid e flexbox.</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
@@ -272,7 +272,7 @@
             <div class="projeto-infos">
               <h2 data-subtitulo>Clone Orkut</h2>
               <p>Clone da icônica rede social Orkut.</p>
-              <p>Maiores desafios: A criação do layout mais modernizado e a responsividade (Também pensar em um desing que fosse mobile, já que a rede social acabou antes de se lançar no modo mobile)</p>
+              <p>Maiores desafios: A criação do layout mais modernizado e a responsividade (Também pensar em um desing que fosse mobile, já que a rede social acabou antes de se lançar no modo mobile).</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
@@ -348,7 +348,7 @@
             <div class="projeto-infos">
               <h2 data-subtitulo>Bikscraft</h2>
               <p>Site criado durante o curso HTML e CSS Completo do Curso Origamid.</p>
-              <p>Maiores desafios: Entender as tags mais importantes e suas semânticas, dispor itens com flex e grid organização de multi-páginas, controle de dados e do DOM.</p>
+              <p>Maiores desafios: Entender as tags mais importantes e suas semânticas, dispor itens com flex e grid, organização de multi-páginas, controle de dados e do DOM.</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
