att: touchmove adicionado

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <img class="projeto-imagem" src="img/thumbnails/comic-quizz.gif" alt="comic-quizz">
             <div class="projeto-infos">
               <h2 data-subtitulo>Comic Quizz</h2>
-              <p>Um jogo estilo quizz com personargens secreto, tematizado com personargens do mundo dos quadrinhos.</p>
+              <p>Um jogo estilo quizz com personargem secreto, tematizado com personargens do mundo dos quadrinhos.</p>
               <p>Maiores desafios: Desenvolver a lógica do jogo, como o controle das letras clicadas, e construir o menu dicas, que permite remover ou selecionar automaticamente e aleatoriamente uma letra, deixar tudo responsivo e também controlar todo o progresso do jogador.</p>
               <div class="projeto-tecnologias">
                 <ul>
@@ -148,7 +148,7 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="abelardojr0.github.io/Comic-Quizz/">Site</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Comic-Quizz/">Site</a>
                 <a target="_blank" class="botao" href="https://github.com/abelardojr0/Comic-Quizz">Github</a>
               </div>
             </div>
@@ -321,7 +321,7 @@
             <img class="projeto-imagem" src="img/thumbnails/robotron.png" alt="robotron">
             <div class="projeto-infos">
               <h2 data-subtitulo>Robotron 2000</h2>
-              <p>Página construída durante o curso de Javascript da plataforma da Alura com in tuito de praticar controle do DOM.</p>
+              <p>Página construída durante o curso de Javascript da plataforma da Alura com intuito de praticar controle do DOM.</p>
               <p>Maiores desafios: Controlar elementos do DOM, dominar eventos.</p>
               <div class="projeto-tecnologias">
                 <ul>
@@ -486,8 +486,8 @@
             </div>
             <div class="carrossel-infos">
               <h2 data-subtitulo>Comic Quizz</h2>
-              <p>Um jogo estilo quizz com personargens secreto, tematizado com personargens do mundo dos quadrinhos.</p>
-              <p>Maiores desafios: Desenvolver a lógica do jogo, como o controle das letras clicadas, e construir o menu dicas, que permite remover ou selecionar automaticamente e aletoriamente uma letra, deixar tudo responsivo e também controlar todo o progresso do jogador.</p>
+              <p>Um jogo estilo quizz com personargem secreto, tematizado com personargens do mundo dos quadrinhos.</p>
+              <p>Maiores desafios: Desenvolver a lógica do jogo, como o controle das letras clicadas, e construir o menu dicas, que permite remover ou selecionar automaticamente e aleatoriamente uma letra, deixar tudo responsivo e também controlar todo o progresso do jogador.</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
@@ -544,8 +544,8 @@
             </div>
             <div class="carrossel-infos">
               <h2 data-subtitulo>Up The Irons</h2>
-              <p>Fã page com gestão de downloads, conteudo sobre a banda e um gigantesco acervo.</p>
-              <p>Maiores desafios: Manter a responsividade e criar o layout das diversas páginas, projeto feito para fixar conhecimentos de grid e flexbox</p>
+              <p>Fã page com gestão de downloads, conteúdo sobre a banda e um gigantesco acervo.</p>
+              <p>Maiores desafios: Manter a responsividade e criar o layout das diversas páginas, projeto feito para fixar conhecimentos de grid e flexbox.</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
@@ -574,7 +574,7 @@
             <div class="carrossel-infos">
               <h2 data-subtitulo>Hero Memory</h2>
               <p>Jogo da memória com tema de super heróis.</p>
-              <p>Maiores desafios: Deixar o design agradável e funcional, desenvover a lógica de acertos e erros do jogo, ligar com armazenamento de dados.</p>
+              <p>Maiores desafios: Deixar o design agradável e funcional, desenvover a lógica de acertos e erros do jogo, lidar com armazenamento de dados.</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
@@ -603,7 +603,7 @@
             <div class="carrossel-infos">
               <h2 data-subtitulo>Find</h2>
               <p>Projeto para automação de cálculos matemáticos, resolve facilmente problemas de Progressão Aritimética e Progressão Geométrica</p>
-              <p>Maiores desafios: Estabeleter e deixar funcional as formulas matemáticas para os mais diversos casos possíveis, e também deixar o design agradável e intuitivo.</p>
+              <p>Maiores desafios: Estabelecer e deixar funcional as formulas matemáticas para os mais diversos casos possíveis, e também deixar o design agradável e intuitivo.</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
@@ -632,7 +632,7 @@
             <div class="carrossel-infos">
               <h2 data-subtitulo>Clone Orkut</h2>
               <p>Clone da icônica rede social Orkut.</p>
-              <p>Maiores desafios: A criação do layout mais modernizado e a responsividade (Também pensar em um desing que fosse mobile, já que a rede social acabou antes de se lançar no modo mobile)</p>
+              <p>Maiores desafios: A criação do layout mais modernizado e a responsividade (Também pensar em um desing que fosse mobile, já que a rede social acabou antes de se lançar no modo mobile).</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
@@ -720,7 +720,7 @@
             <div class="carrossel-infos">
               <h2 data-subtitulo>Bikscraft</h2>
               <p>Site criado durante o curso HTML e CSS Completo do Curso Origamid.</p>
-              <p>Maiores desafios: Entender as tags mais importantes e suas semânticas, dispor itens com flex e grid organização de multi-páginas, controle de dados e do DOM.</p>
+              <p>Maiores desafios: Entender as tags mais importantes e suas semânticas, dispor itens com flex e grid, organização de multi-páginas, controle de dados e do DOM.</p>
               <div class="projeto-tecnologias">
                 <ul>
                   <li><img src="img/tecnologias/html.png" alt=""></li>
