edit: ajeitando links quebrados

--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="abelardojr0.github.io/Clone-Orkut/">Site</a>
-                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Clone-Orkutx">Github</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Clone-Orkut/">Site</a>
+                <a target="_blank" class="botao" href="https://github.com/abelardojr0/Clone-Orkut">Github</a>
               </div>
             </div>
           </div>
@@ -411,7 +411,7 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="abelardojr0.github.io/Mochila-Viagens/">Site</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Mochila-Viagens/">Site</a>
                 <a target="_blank" class="botao" href="https://github.com/abelardojr0/Mochila-Viagens">Github</a>
               </div>
             </div>
@@ -461,7 +461,7 @@
                 </ul>
               </div>
               <div class="botoes">
-                <a target="_blank" class="botao" href="hhttps://abelardojr0.github.io/Bom-Gosto/">Site</a>
+                <a target="_blank" class="botao" href="https://abelardojr0.github.io/Bom-Gosto/">Site</a>
                 <a target="_blank" class="botao" href="https://github.com/abelardojr0/Bom-Gosto">Github</a>
               </div>
             </div>
